@@ -1026,6 +1026,7 @@ nuttx-0.3.12 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Add mkfifo()
 	* Add pipe() and test for both pipes and fifos
 	* Attempts to open a FIFO will now block until there is at least one writer
+	* Add test/Fixed errors in FIFO reader/writer interlocks
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
